name:                hackaroons
version:             0.1.0.0
synopsis:            Macaroons for Haskell!
-- description:
license:             MIT
license-file:        LICENSE
author:              Evan Cordell
maintainer:          cordell.evan@gmail.com
-- copyright:
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Macaroon.Macaroon, Macaroon.Caveat
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , bytestring >=0.10 && <0.12
                     , SHA >=1.6.4 && <1.7
                     , base64-bytestring >=1.0.0.0
                     , base16-bytestring >=0.1.1.6
                     , binary >= 0.7.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
